--- a/Alpha/main_notebook.ipynb
+++ b/Alpha/main_notebook.ipynb
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the agent follows closely the Nash equilibrium when it has perfect information."
+    "We can see that when that when the agent has perfect informations (knows the demand parameters and the other firm's marginal cost), it learns a strategy close to the nash equilibrium."
    ]
   },
   {
@@ -294,6 +294,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here the agent has only partial information on the market, he knows the demand parameters but not the other's firm cost. In this context, he adopts a different strategy than the nash equilibrium. Indeed, the agent produces more quantity when the marginal cost is low, but it produces less than the nash equilibrium when the marginal cost is high."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Cournot Reinforcement Learning with Asymmetric Information\n",
     "\n",
     "Again, we remove some informations for our agent as here it doesn't know about demand's parameters and other firm's cost."
@@ -401,6 +408,13 @@
     "# Plot how policies respond to different costs\n",
     "fig = plot_policy_response(policies, env, a_fixed=100.0, b_fixed=1.0, figsize=(14, 5))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We observe here the same phenomena than with partial information. Here the agent has no information on the demand parameters and on the other's firm cost. In this context, he adopts a different strategy than the nash equilibrium. Indeed, the agent produces more quantity when the marginal cost is low, but it produces less than the nash equilibrium when the marginal cost is high."
    ]
   },
   {
@@ -588,6 +602,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The two perfect informations agent are very close to the nash equilibrium as expected. Therefore they have high profits."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -630,6 +651,13 @@
     "print(f\"  Average quantity: {quantities_2[:, 1].mean():.2f} ± {quantities_2[:, 1].std():.2f}\")\n",
     "\n",
     "print(f\"\\nProfit difference: {(profits_2[:, 0].mean() - profits_2[:, 1].mean()):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here it gets interesting. A perfect agent, that can observe the other's firm cost and expect it to act rationnally. Therefore, it produces the same quantity of the nash equilibrium. However, the partial information doesn't know all the informations, and since its own cost is low produces more than what it would have produced if it followed the nash equilibrium. In this single shot cournot game, the partial information gets more profit than the perfect information while the latest earned less than it would have if it played against another perfect information agent."
    ]
   },
   {
@@ -678,8 +706,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here it is similar to the previous situation where with low cost, the agent produces more than the nash equilibrium and therefore earns more profit than the perfect information. However, we can observe that this agent that has no information on demand produces even more than the partial agent, and therefore its profit is lower than this one. Because of this, the perfect agent also sees its profit diminishing from previous scenarios."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +723,7 @@
      "text": [
       "\n",
       "============================================================\n",
-      "TEST 3: Partial Info vs Partial Info\n",
+      "TEST 4: Partial Info vs Partial Info\n",
       "============================================================\n",
       "\n",
       "Agent 1 (Partial Info):\n",
@@ -706,7 +741,7 @@
    "source": [
     "# Test 3: Partial info vs Partial info\n",
     "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"TEST 3: Partial Info vs Partial Info\")\n",
+    "print(\"TEST 4: Partial Info vs Partial Info\")\n",
     "print(\"=\" * 60)\n",
     "test_policies_3 = [partial_info_agent, partial_info_agent]\n",
     "profits_3, quantities_3 = evaluate_agents(test_env, test_policies_3)\n",
@@ -723,8 +758,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When both agent have partial informations, they both produce more than the nash equilibrium and hence, earn less than if they both had perfect knowledge. Here no one is exploiting someone else, but their uncertainty lead them to have less profit that if they knew the other's firm cost."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +775,7 @@
      "text": [
       "\n",
       "============================================================\n",
-      "TEST 3: Partial Info vs Asymmetric info\n",
+      "TEST 5: Partial Info vs Asymmetric info\n",
       "============================================================\n",
       "\n",
       "Agent 1 (Partial Info):\n",
@@ -749,9 +791,9 @@
     }
    ],
    "source": [
-    "# Test 3: Partial info vs Partial info\n",
+    "# Test 3: Partial info vs Asymmetric info\n",
     "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"TEST 3: Partial Info vs Asymmetric info\")\n",
+    "print(\"TEST 5: Partial Info vs Asymmetric info\")\n",
     "print(\"=\" * 60)\n",
     "test_policies_3 = [partial_info_agent, asymmetric_info_agent]\n",
     "profits_3, quantities_3 = evaluate_agents(test_env, test_policies_3)\n",
@@ -768,8 +810,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The uncertainty about the demand makes the asymmetric agent produce more with low marginal cost, even more than the partial agent. This leads both firms to see low profit in comparison to the previous scenarios, with the no information agent earning more and exploiting the partial agent a bit."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +845,7 @@
    "source": [
     "# Test 3: Asymmetric info vs Asymmetric info\n",
     "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"TEST 3: Partial Info vs Asymmetric info\")\n",
+    "print(\"TEST 6: Partial Info vs Asymmetric info\")\n",
     "print(\"=\" * 60)\n",
     "test_policies_3 = [asymmetric_info_agent, asymmetric_info_agent]\n",
     "profits_3, quantities_3 = evaluate_agents(test_env, test_policies_3)\n",
@@ -810,6 +859,13 @@
     "print(f\"  Average quantity: {quantities_3[:, 1].mean():.2f} ± {quantities_3[:, 1].std():.2f}\")\n",
     "\n",
     "print(f\"\\nProfit difference: {(profits_3[:, 0].mean() - profits_3[:, 1].mean()):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here the profits are very low, because both agents are overproducing a lot with low marginal cost. Since they don't know the demand parameters, that's how the strategy they use. "
    ]
   }
  ],
